# SLF

./: .gitignore  CMakeLists.txt  README.md  valgrind.sh
data/: config.json  si2_m4Dr6_m1296.08.query.graph  si2_m4Dr6_m1296.08.target.graph  si2_r001_m400.02.query.graph  si2_r001_m400.02.target.graph  si2_r001_m400.09.query.graph  si2_r001_m400.09.target.graph
include/: app.h  common.h  predefined.h
include/config/: config_base.h  slf_config.h
include/graph/: edge.h  graph.h  graph_base.h  io.h  node.h
include/si/: match_sequence_selector.h  parallel_subgraph_isomorphism.h  results_taker.h  sequential_subgraph_isomorphism.h  shared_task_pool.h  state.h  subgraph_isomorphism_base.h  task_manager.h  tasks.h
include/tools/: fenwick.h  shared_object_memory_pool.h  timer.h  validation.h
perf/: CMakeLists.txt  perf.cpp
src/: CMakeLists.txt  Edge.hpp  Graph.cpp  Graph.hpp  Node.hpp  Pair.hpp  State.cpp  State.hpp  VF2.cpp  VF2.h  app.cpp  sg.cpp  si.cpp  slf.cpp  testi.cpp  veridator.cpp
src/include/: AnswerChecker.hpp  AnswerReceiver.hpp  Edge.hpp  Graph.hpp  GraphReader.hpp  IndexTurner.hpp  MatchOrderSelector.hpp  Node.hpp  NodeSet.hpp  Pair.hpp  RandomGenerator.hpp  SolutionReader.hpp  State.hpp  SubgraphGenerator.hpp  SubgraphIosmorphism.hpp  SubgraphIosmorphismThread.hpp  VF2.hpp  common.h  si_marcos.h
src/include/graph/: Edge.hpp  Graph.hpp  Node.hpp
src/include/si/: AnswerReceiver.hpp  MatchOrderSelector.hpp  NodeSet.hpp  ParallelSubgraphIsomorphism.hpp  SearchTree.hpp  ShareTasksContainerPool.hpp  State.hpp  SubgraphIosmorphism.hpp  SubgraphIosmorphismThread.hpp  SubgraphIsomorphism.hpp  SubgraphIsomorphismThread.hpp  TaskDistributor.hpp  Tasks.hpp  ThreadController.hpp  ThreadRelatedClass.hpp  si_marcos.h
src/include/tools/: AdaptiveStateChanger.hpp  AnswerChecker.hpp  DynamicThreadPool.hpp  GraphReader.hpp  IndexTurner.hpp  SolutionReader.hpp  SubgraphGenerator.hpp  ThreadPool.hpp
src/si/: match_sequence_selector.cpp  parallel_subgraph_isomorphism.cpp  sequential_subgraph_isomorphism.cpp  state.cpp  subgraph_isomorphism_base.cpp  task_manager.cpp  tasks.cpp
src/tests/: CMakeLists.txt  boost-si-test.cpp  testi.cpp
src/tools/: timer.cpp
test/: pattern.graph  target.graph
tests/: CMakeLists.txt
tests/config/: config_unittest.cpp
tests/graph/: graph_unittest.cpp
tests/si/: si_unittest.cpp
tests/tools/: tools_unittest.cpp
